--- a/ariana.html
+++ b/ariana.html
@@ -10,35 +10,34 @@
             <p>This is a page all about the music and artists that I like!</p>
         </header>
         <main>
-            <aritcle>
-                <h3>Beyoncé</h3>
-                <p>Beyoncé is an American singer, songwriter, and actress. She is known for her powerful voice and stage presence.</p>
-                <img src = "./img/Beyonce.webp" alt = "Beyonce" width = 25%/>
+            <article>
+                <h3>Ariana Grande</h3>
+                <p>Ariana Grande is an American singer, songwriter, and actress. She is known for her wide vocal range and powerful ballads.</p>
                 <section>
                     <p>Favorite Songs</p>
                     <ul>
-                        <li>Crazy in Love</li>
-                        <li>Halo</li>
-                        <li>Formation</li>
+                        <li>Thank U, Next</li>
+                        <li>No Tears Left to Cry</li>
+                        <li>7 Rings</li>
                     </ul>
                 </section>
                 <section>
                     <p>Best Albums</p>
                     <ol>
-                        <li>Lemonade</li>
-                        <li>Renaissance</li>
-                        <li>Cowboy Carter</li>
+                        <li>Thank U, Next</li>
+                        <li>Positions</li>
+                        <li>Sweetener</li>
                     </ol>
-                    <p>Learn more about <a href="https://www.beyonce.com/">Beyoncé here</a>.</p>
+                    <p>Learn more about <a href="https://www.arianagrande.com/">Ariana Grande here</a>.</p>
                 </section>
             </article>
             <nav>
                 <h4>See My Other Favorite Artists</h4>
                 <ul>
-                    <li><a href="./ariana.html">Ariana Grande</a></li>
+                    <li><a href="./index.html">Beyoncé</a></li>
                     <li><a href="./chappell.html">Chappell Roan</a></li>
                 </ul>
             </nav>
         </main>
-    </body> 
+    </body>
 </html>
